--- a/text/zavrsni.tex
+++ b/text/zavrsni.tex
@@ -504,27 +504,38 @@ The maximum likelihood function for the model was constructed by examining the e
 
 \begin{table}[htp]    
 \small
-%TODO update table
+%0  0.77791 12549.02 0.062
+%1  9.00000 11792.91 0.763
+%2  7.34400 11058.83 0.664
+%3  3.91023  7636.39 0.512
+%4  4.52381  6764.81 0.669
+%5  3.74797  6443.38 0.582
 \begin{subtable}{\textwidth}
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|}
  \hline 
  \rule[-1ex]{0pt}{2.5ex} $y$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$  \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} successes & $634$ & $594$ & $918$ & $3746$ & $95$ & $461$  \\ 
+ \rule[-1ex]{0pt}{2.5ex} successes & $0.77791$ & $9.00000$ & $7.34400$ & $3.91023$ & $4.52381$ & $3.74797$  \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} trials & $4316569$ & $777738$ & $1381436$ & $4989088$ & $141966$ & $747000$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} trials & $12549.02$ & $11792.91$ & $11058.83$ & $7636.39$ & $6764.81$ & $6443.38$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-3}$)& $0.1469$ & $0.7632$ & $0.6641$ & $0.7503$ & $0.6687$ & $0.6168$  \\ 
+ \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-3}$)& $0.062$ & $0.763$ & $0.664$ & $0.512$ & $0.669$ & $0.582$  \\ 
  \hline 
   \hline 
+%6  1.26634  5156.96 0.246
+%7  0.89345  3001.87 0.298
+%8  0.67893  1882.61 0.361
+%9  1.41053  1664.66 0.847
+%10 3.40826  1434.86 2.375
+%11 1.62857   879.45 1.852
  \rule[-1ex]{0pt}{2.5ex} $y$ & $6$ & $7$ & $8$ & $9$ & $10$ & $11$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} successes & $1821$ & $2440$ & $203$ & $268$ & $167$ & $627$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} successes & $ 1.26634$ & $0.89345$ & $0.67893$ & $1.41053$ & $3.40826$ & $1.62857$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} trials & $4546628$ & $4416685$ & $274993$ & $231287$ & $68743$ & $241108$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} trials & $5156.96$ & $3001.87$ & $1882.61$ & $1664.66$ & $1434.86$ & $879.45$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-3}$)& $0.4004$ & $0.5522$ & $0.7377$ & $1.1574$ & $2.4235$ & $2.5938$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-3}$)& $0.246$ & $0.298$ & $0.361$ & $0.847$ & $2.375$ & $1.852$ \\ 
  \hline 
  \end{tabular}  
   \caption{Restricted Referendum Dataset.}
@@ -533,30 +544,42 @@ The maximum likelihood function for the model was constructed by examining the e
 \\[1ex]
 \begin{subtable}{\textwidth}
 \centering
+%0 0.77791 1697339.72 0.458
+%1 9.00000 1694518.91 5.311
+%2 7.34400 1693784.83 4.336
+%3 3.91023 1690362.39 2.313
+%4 4.52381 1689490.81 2.678
+%5 3.74797 1689169.38 2.219
 \begin{tabular}{|c|c|c|c|c|c|c|}
  \hline 
  \rule[-1ex]{0pt}{2.5ex} $y$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$  \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} successes & $634$ & $594$ & $918$ & $3746$ & $95$ & $461$  \\ 
+ \rule[-1ex]{0pt}{2.5ex} successes & $0.77791$ & $9.00000$ & $7.34400$ & $3.91023$ & $4.52381$ & $3.74797$  \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} trials & $588223$ & $111838$ & $211723$ & $1068475$ & $35479$ & $195943$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} trials & $1697340$ & $1694519$ & $1693785$ & $1690362$ & $1689491$ & $1689169$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-6}$)& $1.0778$ & $5.3112$ & $4.3359$ & $3.5051$ & $2.6776$ & $2.3527$  \\ 
+ \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-6}$)& $0.458$ & $5.311$ & $4.336$ & $2.313$ & $2.678$ & $2.219$  \\ 
  \hline 
   \hline 
  \rule[-1ex]{0pt}{2.5ex} $y$ & $6$ & $7$ & $8$ & $9$ & $10$ & $11$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} successes & $1821$ & $2440$ & $203$ & $268$ & $167$ & $627$ \\ 
+%6  1.26634 1687883 0.750
+%7  0.89344 1685728 0.530
+%8  0.67893 1684609 0.403
+%9  1.41053 1684391 0.837
+%10 3.40816 1684161 2.024
+%11 1.62857 1639898 0.993
+ \rule[-1ex]{0pt}{2.5ex} successes & $ 1.26634$ & $0.89345$ & $0.67893$ & $1.41053$ & $3.40826$ & $1.62857$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} trials & $1456739$ & $2365281$ & $245952$ & $235812$ & $80839$ & $429336$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} trials & $1687883$ & $1685728$ & $1684609$ & $1684391$ & $1684161$ & $1639898$ \\ 
  \hline 
- \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-6}$)& $1.2501$ & $1.0315$ & $0.8254$ & $1.1365$ & $2.0658$ & $1.4604$ \\ 
+ \rule[-1ex]{0pt}{2.5ex} success rate ($10 ^ {-6}$)& $0.750$ & $0.530$ & $0.403$ & $0.837$ & $2.024$ & $0.993$ \\ 
  \hline 
  \end{tabular}
  \caption{Complete referendum dataset.}
  \label{T2}
 \end{subtable}
- \caption{Average frequencies of observed successful activations, number of trials  and success rate for the time period when $y$ authorities were active on the Restricted and Complete Referendum Datasets.}
+ \caption{Average frequencies of observed successful activations per time step, average frequencies of trials per time step  and success rates for the time period when $y$ authorities were active on the Restricted and Complete Referendum Datasets.}
 \label{tab}
 \end{table}
 
