--- a/text/zavrsni.tex
+++ b/text/zavrsni.tex
@@ -19,8 +19,9 @@
 
 \maketitle
 
-%\izvornik{}
-\zahvala{}
+\izvornik{}
+\zahvala{
+Firstly, I wish to thank my advisor, doc. dr. sc Mile  Šikić for great support and valuable guidance. Thank you to Nino Antulov-Fantulin and Matija Piškorec from Ruđer Bošković Institute in Zagreb for numerous advice and suggestions. Also special thanks to Bruno Rahle for contributing greatly in the data collection.}
 
 \tableofcontents
 \clearpage
