--- a/text/fer.cls
+++ b/text/fer.cls
@@ -337,7 +337,7 @@ kage[numbers, square]{natbib}
 \vspace*{\fill}
 \thispagestyle{empty}
 \begin{center}
-  {\bf \@title}
+  {\bf Širenje informacija u društvenim mrežama}
 \end{center}
 \hspace*{\fill} {\bf Sa\v{z}etak} \hspace*{\fill} \par
 \vspace*{25pt}
